# ProtEnc

./: .gitignore  LICENSE  README.md  pyproject.toml
protenc/: __init__.py  encoder.py  io.py  models.py  types.py  utils.py
protenc/console/: extract.py
tests/: fixtures.py  test_encoder.py  test_models.py  utils.py
