[tool.poetry]
name = "protenc"
version = "0.1.0"
description = "Simplify extraction of protein embedding from various models."
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"
packages = [{include = "protenc"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.24.0"
lmdb = "^1.3.0"
torch = "^1.13.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
biopython = "^1.80"
sentencepiece = "^0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
