[tool.poetry]
name = "protenc"
version = "0.1.0"
description = "Extract protein embeddings from pretrained models."
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"
packages = [{include = "protenc"}]

[tool.poetry.scripts]
protenc = 'protenc.console.extract:entrypoint'

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.24.0"
lmdb = "^1.3.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
biopython = "^1.80"
sentencepiece = "^0.1.97"
json-stream = "^2.1.1"
humanfriendly = "^10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
