[tool.poetry]
name = "protenc"
version = "0.1.6"
description = "Extract protein embeddings from protein language models."
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"
packages = [{include = "protenc"}]
repository = "https://github.com/kklemon/ProtEnc"
homepage = "https://github.com/kklemon/ProtEnc"

[tool.poetry.scripts]
protenc = 'protenc.console.extract:entrypoint'

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
torch = {version = "^2.0.1", source = "pytorch-gpu-src"}
transformers = "^4.33.3"
lmdb = "^1.4.1"
pandas = "^2.1.1"
tqdm = "^4.66.1"
biopython = "^1.81"
sentencepiece = "^0.1.99"
json-stream = "^2.3.2"
humanfriendly = "^10.0"
pytest = "^7.4.2"
tensordict = "^0.1.2"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
